--- a/front/src/app/pages/vehicle/vehicle.component.html
+++ b/front/src/app/pages/vehicle/vehicle.component.html
@@ -4,9 +4,7 @@
     [data]="vehicleList"
     [cols]="columns"
     (onCreate)="createVehicle()"
-    (onEdit)="editVehicle($event)"
-    (onDelete)="openConfirmDialog($event)"
-    (onLink)="linkVehicle($event)"
+    [buttonConfig]="buttonConfig"
 >
 </app-page>
 <app-toast #toast />
