fix(CU-86b1ecg9p): refresh table when add new register. Formats and validators

--- a/front/src/app/components/page/page.component.html
+++ b/front/src/app/components/page/page.component.html
@@ -19,7 +19,7 @@
       [columns]="cols"
       [scrollable]="true"
       scrollHeight="calc(100vh - 270px)"
-      [value]="data ?? []"
+      [value]="data"
       [rows]="10"
       [rowsPerPageOptions]="[10, 25, 50]"
       [paginator]="true"
