--- a/front/src/app/components/login-form/login-form.component.css
+++ b/front/src/app/components/login-form/login-form.component.css
@@ -1,11 +1,4 @@
-.form-container {
-  max-width: 300px;
-  width: 100%;
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  max-width: 300px;
+input,
+::ng-deep .p-inputtext.p-component.p-element.p-password-input{
+  width: 400px;
 }
