feat(CU-86b1fjgkn) Add Home component

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="text-center">
     <h1 class="welcome">{{ welcome }}, bienvenido al taller mecánico!</h1>
     <img src="../../../assets/Logo.png" class="image" alt="Imagen de La Azul y Oro">
 </div>
