--- a/front/src/app/components/page/page.component.html
+++ b/front/src/app/components/page/page.component.html
@@ -10,6 +10,7 @@
         [style]="buttonStyle"
         size="small"
         (onClick)="create()"
+        [ngClass]="{ 'disableItem': !canCreate }"
       />
     </div>
   </div>
