--- a/front/src/app/pages/home/home.component.css
+++ b/front/src/app/pages/home/home.component.css
@@ -1,12 +1,25 @@
 .welcome {
-    font-size: 55px;
+    font-size: 35px;
+    margin: 20px 0;
 }
 
 .image {
-    width: 200px;
+    width: 175px;
     border-radius: 10px;
 }
 
 .title {
-    font-size: 40px;
+    font-size: 25px;
+}
+
+h4{
+    font-size: 20px;
+}
+
+h5{
+    font-size: 18px;
+}
+
+::ng-deep .p-card-content{
+    padding: 0;
 }
