--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -1,20 +1,29 @@
-<p-sidebar [(visible)]="visible" [style]="sidebarStyle" (onHide)="hideEmit()">
-    <h3>Menú</h3>
+<p-sidebar 
+    [(visible)]="visible" 
+    [style]="sidebarStyle" 
+    (onHide)="hideEmit()">
+    <div class="d-flex flex-column content">
+        <h3>Menú</h3>
 
-    <p-menu [model]="items">
-        <ng-template pTemplate="item" let-item>
-            <ng-container>
-                <a [routerLink]="item.path" class="p-menuitem-link" (click)="hideEmit()">
-                    <span [class]="item.icon"></span>
-                    <span class="ms-2">{{ item.label }}</span>
-                </a>
-            </ng-container>
-        </ng-template>
-    </p-menu>
+        <p-menu [model]="items">
+            <ng-template pTemplate="item" let-item> 
+                <ng-container>
+                    <a 
+                    [routerLink]="item.path" 
+                    class="p-menuitem-link"
+                    (click)="hideEmit()"
+                    [ngClass]="{ 'disableItem': item.isDisabled }">
+                        <span [class]="item.icon"></span>
+                        <span class="ms-2"[pTooltip]="item.isDisabled ? textTooltip : ''">{{ item.label }}</span>
+                    </a>
+                </ng-container>
+            </ng-template>
+        </p-menu>
 
-    <div class="footer-text mt-auto">   
-        <p>
-            Made with 💕 by La Azul y Oro -&nbsp;{{year}} 
-        </p>
+        <div class="footer-text mt-auto">   
+            <p>
+                Made with 💕 by La Azul y Oro -&nbsp;{{year}} 
+            </p>
+        </div>
     </div>
 </p-sidebar>
