--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -7,3 +7,9 @@
 html {
     background-image: url('./assets/Background.png');
 }
+
+.disableItem,
+.disableItem button{
+    cursor: default;
+    opacity: 0.5;
+}
