--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-header (toggleSidebar)="toggleSidebar()"></app-header>
   <app-sidebar [visible]="isSidebarVisible" (hide)="toggleSidebar()"></app-sidebar>
 </div>
-<div class="container main-content py-2">
+<div class="container main-content p-0">
   <router-outlet></router-outlet>
 </div>
