--- a/front/src/app/pages/employee/employee.component.html
+++ b/front/src/app/pages/employee/employee.component.html
@@ -5,6 +5,7 @@
     [cols]="columns"
     (onCreate)="openForm()"
     [buttonConfig]="buttonConfig"
+    [canCreate]="canCreate"
 />
 <app-toast #toast />
 <app-confirm-dialog 
