--- a/front/src/app/pages/vehicle/vehicle.component.html
+++ b/front/src/app/pages/vehicle/vehicle.component.html
@@ -5,6 +5,7 @@
     [cols]="columns"
     (onCreate)="openForm()"
     [buttonConfig]="buttonConfig"
+    [canCreate]="canCreate"
 > 
 </app-page>
 <app-toast #toast />
