--- a/front/src/app/shared/sidebar/sidebar.component.css
+++ b/front/src/app/shared/sidebar/sidebar.component.css
@@ -1,6 +1,9 @@
+.content {
+    height: calc(100vh - 95px) !important;
+    overflow: hidden;
+}
+
 .footer-text{
     font-size: .75rem;
-    position: absolute;
-    bottom: 0px;
-    left: 15%;
+    text-align: center;
 }
