refactor(CU-86b1kpurb): remove unused code

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="text-center mb-3">
     <h1 class="welcome">{{ welcome }}, bienvenido al taller mecánico!</h1>
-    <img src="../../../assets/Logo.png" class="image" alt="Imagen de La Azul y Oro">
+    <img src="../../../assets/Logo.png" class="image" alt="La Azul y Oro">
 </div>
 <p-card class="mb-2">
     <div class="text-center">
